@@ -1,5 +1,6 @@
 7.3.1
  - Fix visibility issue on gcc/clang, especially on macOS.  (#395)
+ - Use "pure" & "visibility" attributes if they work, regardless of compiler.
 7.3.0
  - `stream_to` now quotes and escapes its table name.
  - Removed `transaction_base::classname()`.  Did anyone ever use it?
